// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton /> should render the circular skeleton 1`] = `
.c0 {
  width: 64px;
  height: 64px;
  background-color: #F5F5FA;
  border-radius: 9999px;
  -webkit-animation: placeholderShimmer 1s linear infinite;
  animation: placeholderShimmer 1s linear infinite;
}

<div>
  <div
    class="c0"
    height="64"
    type="circular"
    width="64"
  />
</div>
`;

exports[`<Skeleton /> should render the rectangular skeleton 1`] = `
.c0 {
  width: 400px;
  height: 200px;
  background-color: #F5F5FA;
  -webkit-animation: placeholderShimmer 1s linear infinite;
  animation: placeholderShimmer 1s linear infinite;
}

<div>
  <div
    class="c0"
    height="200"
    type="rectangular"
    width="400"
  />
</div>
`;

exports[`<Skeleton /> should render the text skeleton 1`] = `
.c0 {
  width: 61px;
  background-color: #F5F5FA;
  height: 24px;
  -webkit-animation: placeholderShimmer 1s linear infinite;
  animation: placeholderShimmer 1s linear infinite;
}

<div>
  <div
    class="c0"
    type="text"
    width="61"
  />
</div>
`;
